# chauka

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  fly.toml  test_api.py
backend/: .env.local  Dockerfile  ISSUES.md  alembic.ini  kashana.db  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 017283ce0a10_add_google_sheets_integration.py  a8b9c0d1e2f3_add_activity_fields.py  b3f1a2c4d5e6_add_levels_config_to_settings.py  c4d5e6f7a8b9_add_target_model.py  c4d5e6f7a8b9_backfill_owner_memberships.py  d5e6f7a8b9c0_add_password_reset_fields.py  d5e6f7a8b9c0_add_taline_model.py  e1f2a3b4c5d6_add_password_reset_fields.py  e6f7a8b9c0d1_add_statusupdate_model.py  f7a8b9c0d1e2_add_contribution_weighting_to_result.py  f9e8d7c6b5a4_merge_heads.py  g1a2b3c4d5e6_add_description_to_milestone.py  h2b3c4d5e6f7_backfill_owner_memberships.py  h3c4d5e6f7g8_add_level_labels_to_settings.py  i4d5e6f7g8h9_add_permission_tables.py  j5e6f7g8h9i0_add_public_id_columns.py  k6f7g8h9i0j1_add_premium_indicator_features.py  l7g8h9i0j1k2_add_indicator_library.py  (+2 more)
backend/app/: config.py  database.py  exceptions.py  main.py
backend/app/auth/: utils.py  (+2 more)
backend/fixtures/: library_indicators.json
backend/scratchpads/: issue-3-levels-config.md  issue-5-target-model.md  issue-6-taline-model.md
backend/scripts/: create_demo_user.py  create_superuser.py
backend/tests/: conftest.py  test_activities_crud.py  test_auth.py  test_idor.py  test_indicators_crud.py  test_levels_config.py  test_results_crud.py  test_statusupdates.py  test_talines.py  test_targets.py
(+297 files in other folders)
